# s-practice

./: README.md  conftest.py  pyproject.toml
src/tests/: conftest.py  test_google_calc.py
