[tool.poetry]
name = "s-practice"
version = "0.1.0"
description = ""
authors = ["sbtn.a <akainox@gmail.com>"]
readme = "README.md"
packages = [{include = "s_practice", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.47.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
